# notary_tools_rust

./: .gitignore  Cargo.toml  merger.json.example
src/: utxo_merger.rs
